--- a/src/utils/githubApi.js.example
+++ b/src/utils/githubApi.js.example
@@ -1,7 +1,8 @@
 module.exports = {
     // Za dobijanje svojih parametara,
     // otici na https://github.com/settings/developers
-    // i registrovati novu OAuth aplikaciju
+    // i registrovati novu OAuth aplikaciju,
+    // a zatim zameniti niske "XXXX" ovde sa dobijenim parametrima OAuth aplikacije
     clientId: "XXXX",
     clientSecret: "XXXX"
 };
